@@ -1,3 +1,8 @@
+Mon Mar 17 10:41:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Map_Manager_Test.cpp:
+          Fixed possible divide by zero reported by Coverity
+
 Mon Mar 17 10:20:30 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Manual_Event_Test.cpp:
